--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,27 @@
 					</properties>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<!-- combine Surefire and Failsafe reports for SonarCloud (see https://stackoverflow.com/a/15567782) -->
+					<reportsDirectory>${project.build.directory}/surefire-reports/</reportsDirectory>
+					<systemPropertyVariables>
+						<de.retest.recheck.rehub.reportUploadEnabled>true</de.retest.recheck.rehub.reportUploadEnabled>
+					</systemPropertyVariables>
+				</configuration>
+				<executions>
+					<execution>
+						<id>run-integration-tests</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
