--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,17 @@ language: java
 
 jdk: openjdk11
 
+addons:
+  sonarcloud:
+    organization: beatngu13-github
+    token:
+      secure: "${SC_TOKEN}"
+
 cache:
   directories:
     - "${HOME}/.m2/"
+    - "${HOME}/.sonar/cache/"
 
 install: true
 
-script: mvn verify
+script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
