--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ cache:
 
 install: true
 
-script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
+script: mvn clean verify sonar:sonar -Pcoverage
