--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ jdk: openjdk11
 addons:
   sonarcloud:
     organization: beatngu13-github
-    token:
-      secure: "${SC_TOKEN}"
+    token: "${SC_TOKEN}"
 
 cache:
   directories:
