--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,12 +11,18 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - uses: actions/cache@v1
+    - name: Cache m2
+      uses: actions/cache@v1
       with:
         path: ~/.m2/repository/
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
+    - name: Cache Sonar
+      uses: actions/cache@v1
+      with:
+        path: ~/.sonar/cache/
+        key: ${{ runner.os }}-sonar
     - name: Build with Maven
       run: >
         mvn clean verify sonar:sonar -Pcoverage
