--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      # fetch unshallow to enable blame for Sonar
+    - name: Fetch unshallow
+      uses: actions/checkout@v2
+      run: |
+        git fetch --prune --unshallow
 
     - name: Set up JDK 11
       uses: actions/setup-java@v1
