--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         key: ${{ runner.os }}-sonar
 
     - name: Build with Maven
-      run: |
+      run: >
         mvn clean verify sonar:sonar -Pcoverage
         -Dsonar.host.url=https://sonarcloud.io
         -Dsonar.organization=beatngu13-github
