--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Build with Maven
       run: >
-        mvn clean verify sonar:sonar -Pcoverage
+        mvn --batch-mode verify sonar:sonar -Pcoverage
         -Dsonar.host.url=https://sonarcloud.io
         -Dsonar.organization=beatngu13-github
         -Dsonar.projectKey=com.github.beatngu13:knapsack-problem
