--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,11 @@ jobs:
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+
+      # fetch unshallow to enable blame for Sonar
+    - name: Fetch unshallow
+      run: |
+        git fetch --prune --unshallow
 
     - name: Set up JDK 11
       uses: actions/setup-java@v1
