--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.1.0-SNAPSHOT</version>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>14</java.version>
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 		<project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>
@@ -57,6 +57,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<release>${java.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -70,6 +71,7 @@
 							junit.jupiter.execution.parallel.config.dynamic.factor=1
 						</configurationParameters>
 					</properties>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -79,6 +81,7 @@
 				<configuration>
 					<!-- combine Surefire and Failsafe reports for SonarCloud (see https://stackoverflow.com/a/15567782) -->
 					<reportsDirectory>${project.build.directory}/surefire-reports/</reportsDirectory>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 				<executions>
 					<execution>
