--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 on: push
 
 env:
-  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
@@ -12,11 +11,6 @@ jobs:
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
-
-      # fetch unshallow to enable blame for Sonar
-    - name: Fetch unshallow
-      run: |
-        git fetch --prune --unshallow
 
     - name: Set up JDK 14
       uses: actions/setup-java@v1
@@ -31,17 +25,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Cache Sonar
-      uses: actions/cache@v2
-      with:
-        path: ~/.sonar/cache/
-        key: ${{ runner.os }}-sonar
-
     - name: Build with Maven
       run: >
-        mvn --batch-mode verify sonar:sonar -Pcoverage
-        -Dsonar.host.url=https://sonarcloud.io
-        -Dsonar.organization=beatngu13-github
-        -Dsonar.projectKey=com.github.beatngu13:knapsack-problem
-        -Dsonar.java.source=14
-        -Dsonar.java.target=14
+        mvn --batch-mode verify
