--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,4 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: >
-        mvn --batch-mode verify
+      run: mvn verify --batch-mode
