--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,10 @@
-on: push
+on:
+  push:
+  
+  workflow_dispatch:
+    inputs:
+      clearCache:
+        description: 'Clear cache'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -21,9 +27,11 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository/
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-${{ github.event.inputs.clearCache }}
         restore-keys: |
-          ${{ runner.os }}-maven-
+          ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-
+          ${{ runner.os }}-maven--${{ github.event.inputs.clearCache }}
+          ${{ runner.os }}-maven--
 
     - name: Build with Maven
       run: mvn verify --batch-mode
