--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,4 @@
-on:
-  push:
-  
-  workflow_dispatch:
-    inputs:
-      clearCache:
-        description: 'Clear cache'
+on: push
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -27,7 +21,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository/
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-${{ github.event.inputs.clearCache }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-${{ secrets.CACHE_VERSION }}
 
     - name: Build with Maven
       run: mvn verify --batch-mode
