--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 16
-
-      - name: Cache Maven
-        uses: actions/cache@v2.1.6
-        with:
-          path: ~/.m2/repository/
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-${{ secrets.CACHE_VERSION }}
+          cache: 'maven'
 
       - name: Build with Maven
         run: mvn verify -B
