--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 18
-          cache: 'maven'
+          cache: maven
 
       - name: Build with Maven
         run: mvn verify -B
